feat: Mejora estructura archivos y manejo errores
se aplica modificación en las clases y conexión a BD

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=licencias_medicas
+logging.level.root=INFO
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework=DEBUG
+
+spring.datasource.url=jdbc:oracle:thin:@qxl9p21826dzwm8e_tp?TNS_ADMIN=/Users/dmunozm/Wallet_QXL9P21826DZWM8E
+spring.datasource.username=FS1_LIC
+spring.datasource.password=RamoFullStack#1
+spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.OracleDialect
+spring.jpa.hibernate.ddl-auto=none
+
+spring.datasource.hikari.maximum-pool-size= 10
+spring.datasource.hikari.connection-timeout= 30000
